--- a/Android/HomeAgricultureMonitoringSystem/app/build.gradle
+++ b/Android/HomeAgricultureMonitoringSystem/app/build.gradle
@@ -35,6 +35,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        mlModelBinding true
     }
 }
 
@@ -54,7 +55,13 @@ dependencies {
 
     //glide
     implementation "com.github.bumptech.glide:glide:4.12.0"
+
+    //firestore
     implementation 'com.google.firebase:firebase-firestore:23.0.0'
+
+    //tflite
+    implementation 'org.tensorflow:tensorflow-lite-support:0.1.0-rc1'
+    implementation 'org.tensorflow:tensorflow-lite-metadata:0.1.0-rc1'
 
 
     testImplementation 'junit:junit:4.+'
